--- a/src/common/resources/sass/_audio.scss
+++ b/src/common/resources/sass/_audio.scss
@@ -1,7 +1,7 @@
 @charset "utf-8";
 
 .audio-main {
-    margin: 20px 12px;
+    margin: 12px;
     padding: 12px;
     background-color: $stable;
     border: $line-color 1px solid;
