--- a/src/common/resources/sass/pages/_freeInfo.scss
+++ b/src/common/resources/sass/pages/_freeInfo.scss
@@ -3,14 +3,11 @@
 .free-info-view {
 
     .banner {
-        overflow: hidden;
-        padding: 15px 0;
-        margin-bottom: 5px;
-        text-align: center;
 
         .img {
-            width: convert-rem(150px);
-            height: convert-rem(220px);
+            display: block;
+            width: 100%;
+            height: convert-rem(150px);
         }
     }
 
@@ -19,14 +16,17 @@
     }
 
     .audio-content {
-        top: 110px;
+        top: convert-rem(150px);
+        margin-top: 100px;
+        padding: 0;
     }
 
     .free-info-title {
         padding: 0 12px;
         line-height: 2em;
-        font-size: 18px;
+        font-size: 16px;
         color: $text-color;
+        background-color: #fff;
     }
 
     .free-content {
@@ -34,6 +34,7 @@
         line-height: 2em;
         font-size: 13px;
         color: $text-color-secondary;
+        background-color: #fff;
 
         p {
             margin-bottom: 0;
