--- a/src/common/resources/sass/pages/_freeList.scss
+++ b/src/common/resources/sass/pages/_freeList.scss
@@ -45,7 +45,9 @@
         width: 100%;
 
         .img {
+            display: block;
             width: 100%;
+            height: convert-rem(128px);
         }
     }
 
