首页底部广告图片修改

--- a/src/common/resources/sass/pages/_advInfo.scss
+++ b/src/common/resources/sass/pages/_advInfo.scss
@@ -42,11 +42,14 @@
 
         p {
             text-indent: 2em;
+
+            img {
+                margin-left: -2em;
+            }
         }
 
         img {
             max-width: 100%;
-            margin-left: -2em;
         }
     }
 }
