商城详情页删除查看更多功能

--- a/src/common/templates/mall/mallProductInfo.html
+++ b/src/common/templates/mall/mallProductInfo.html
@@ -58,10 +58,9 @@
             </div>
 
             <!-- 图书简介 -->
-            <div class="product-info-describe light-bg" cm-scroll>
+            <div class="product-info-describe light-bg">
                 <div class="describe-title">图书简介</div>
                 <div class="describe-content" ng-bind-html="mallProductInfo.baseData.content"></div>
-                <div class="describe-btn"></div>
             </div>
 
             <!-- 点评 -->
