商城商品详情页符文本编辑器添加图片处理

--- a/src/common/resources/sass/pages/_productInfo.scss
+++ b/src/common/resources/sass/pages/_productInfo.scss
@@ -90,6 +90,10 @@
                 max-width: 100%;
             }
         }
+
+        img {
+            max-width: 100%;
+        }
     }
 
     .describe-btn {
