订单详情页－显示收货人信息

--- a/src/common/templates/orderInfo.html
+++ b/src/common/templates/orderInfo.html
@@ -48,7 +48,7 @@
 
         <!-- <div class="order-steps"></div> -->
 
-        <div class="order-consignee row" ng-if="!orderInfo.bytSwitch && orderInfo.consignee">
+        <div class="order-consignee row" ng-if="orderInfo.consignee">
             <i class="col col-adaptive col-top iconfont icon-dizhi"></i>
             <div class="col">
                 <div class="consignee-name">
