--- a/src/common/resources/sass/pages/_orderInfo.scss
+++ b/src/common/resources/sass/pages/_orderInfo.scss
@@ -51,8 +51,94 @@
     }
 
     .order-steps {
-        display: none;
-        padding: 20px 12px;
+        position: relative;
+        padding: 10px 0;
+        margin: 5px 0;
+
+        .steps-line-bg {
+            position: absolute;
+            top: 39px;
+            left: 10%;
+            z-index: 1;
+            width: 80%;
+            height: 4px;
+            background-color: #ddd;
+        }
+
+        .steps-line-bg-active {
+            position: absolute;
+            top: 39px;
+            left: 10%;
+            z-index: 10;
+            height: 4px;
+            background-color: $energized;
+
+            &.step-1-active {
+                width: 0;
+            }
+
+            &.step-2-active {
+                width: 20%;
+            }
+
+            &.step-3-active {
+                width: 40%;
+            }
+
+            &.step-4-active {
+                width: 60%;
+            }
+
+            &.step-5-active {
+                width: 80%;
+            }
+        }
+
+        .steps-list {
+            position: relative;
+            z-index: 100;
+        }
+
+        .steps-item {
+            float: left;
+            width: 20%;
+            text-align: center;
+            color: $text-color-quiet;
+
+            p {
+                margin-bottom: 0;
+            }
+
+            .item-name {
+                @extend %font-size-mini;
+            }
+
+            .item-node {
+                width: 16px;
+                height: 16px;
+                padding: 4px;
+                margin: 5px auto;
+                background-color: #dcdcdc;
+                border-radius: 50%;
+            }
+
+            .node-finished {
+                background-color: lighten($energized, 30%);
+
+                .step-active {
+                    display: block;
+                    width: 8px;
+                    height: 8px;
+                    background-color: $energized;
+                    border-radius: 50%;
+                }
+            }
+
+            .item-time {
+                @extend %font-size-nano;
+                line-height: 1.25em;
+            }
+        }
     }
 
     .order-consignee {
@@ -157,7 +243,6 @@
             position: relative;
             overflow: hidden;
             line-height: 1.5em;
-            color: $text-color-quiet;
             color: $energized;
             @extend %font-size-small;
 
