--- a/src/common/templates/modals/consigneeEdit.html
+++ b/src/common/templates/modals/consigneeEdit.html
@@ -1,22 +1,22 @@
 <ion-modal-view>
 
     <ion-header-bar class="bar-primary">
-        <button class="button button-clear left-btn" ng-click="modals.consigneeAdd.close()">
+        <button class="button button-clear left-btn" ng-click="modals.consigneeEdit.close()">
             <i class="icon ion-ios-arrow-left"></i>
         </button>
-        <h1 class="title">新增收货地址</h1>
+        <h1 class="title">编辑收货地址</h1>
     </ion-header-bar>
 
     <ion-content class="consignee-add-panel light-bg">
 
-        <form name="form" ng-submit="consigneeAdd.submit()" novalidate>
+        <form name="form" ng-submit="consigneeEdit.submit()" novalidate>
 
             <!-- 收货人 -->
             <div class="consignee-row row">
                 <span class="consignee-name col col-adaptive col-center">收货人：</span>
                 <div class="consignee-info col col-center">
                     <input class="consignee-input" name="firstName" 
-                        ng-model="consigneeAdd.firstName" required/>
+                        ng-model="consigneeEdit.consignee.firstName" required/>
                 </div>
             </div>
 
@@ -25,8 +25,8 @@
                 <span class="consignee-name col col-adaptive col-center">收货地区：</span>
                 <div class="consignee-info col col-center">
                     <input class="consignee-input" name="districtId"
-                        ng-model="consigneeAdd.selectedRegion" cm-select-region
-                        ng-change="consigneeAdd.changeRegion()" required readonly />
+                        ng-model="consigneeEdit.selectedRegion" cm-select-region
+                        ng-change="consigneeEdit.changeRegion()" required readonly />
                 </div>
                 <i class="iconfont icon-rightarrow col col-adaptive col-center"></i>
             </div>
@@ -36,7 +36,7 @@
                 <span class="consignee-name col col-adaptive col-center">详细地址：</span>
                 <div class="consignee-info col col-center">
                     <input class="consignee-input" name="street" 
-                    ng-model="consigneeAdd.street" required/>
+                    ng-model="consigneeEdit.consignee.street" required/>
                 </div>
             </div>
 
@@ -45,14 +45,14 @@
                 <span class="consignee-name col col-adaptive col-center">手机号码：</span>
                 <div class="consignee-info col col-center">
                     <input class="consignee-input" name="mobile" 
-                        ng-model="consigneeAdd.mobile" 
+                        ng-model="consigneeEdit.consignee.mobile" 
                         ng-minlength="11" ng-maxlength="11" maxlength="11" required/>
                 </div>
             </div>
 
             <div class="consignee-btn">
                 <button type="submit" class="button button-block button-primary" 
-                    ng-disabled="form.$invalid">{{consigneeAdd.btnText}}</button>
+                    ng-disabled="form.$invalid">{{consigneeEdit.btnText}}</button>
             </div>
         </form>
 
