--- a/src/common/templates/videoInfo.html
+++ b/src/common/templates/videoInfo.html
@@ -21,18 +21,20 @@
             <div class="text">暂无视频信息</div>
         </div>
 
-        <div ng-if="videoInfo.sellAbled">
+        <!-- 音频 -->
+        <div class="pb" ng-if="videoInfo.sellAbled && videoInfo.genreName == 'radio'">
 
-            <!-- banner图 -->
-            <div class="banner stable-bg" ng-if="videoInfo.genreName == 'radio'">
-                <img class="img" ng-src="{{videoInfo.baseData.picUrl}}" />
-            </div>
+            <ion-content>
 
-            <!-- 视频 -->
-            <div class="video-container" cm-video="videoInfo.videoUrl" ng-if="videoInfo.genreName == 'video'"></div>
+                <!--下拉刷新-->
+                <ion-refresher on-refresh="videoInfo.refresh({showLoading: false})" 
+                    pulling-text="下拉刷新" refreshing-text="正在刷新"></ion-refresher>
 
-            <!-- 音频 -->
-            <div ng-if="videoInfo.genreName == 'radio'">
+                <!-- banner图 -->
+                <div class="banner">
+                    <img class="img" ng-src="{{videoInfo.baseData.picUrl}}" />
+                </div>
+
                 <div cm-audio>
                     <audio id="audio">
                         <source ng-src="{{videoInfo.videoUrl}}" type="video/webm" >
@@ -56,9 +58,30 @@
                         </div>
                     </div>
                 </div>
-            </div>
 
-            <ion-content class="stable-bg" ng-class="{'video-content': (videoInfo.genreName == 'video'), 'audio-content': (videoInfo.genreName == 'radio')}">
+                <!-- 商品基本信息 -->
+                <div class="video-info light-bg">
+                    <div class="info-name">{{videoInfo.baseData.title}}</div>
+                    <div class="info-describe" ng-if="videoInfo.baseData.subtitle">
+                        {{videoInfo.baseData.subtitle}}
+                    </div>
+                </div>
+
+                <!-- 介绍 -->
+                <div class="video-info-describe light-bg">
+                    <div class="describe-title">内容介绍</div>
+                    <div class="describe-content" ng-bind-html="videoInfo.baseData.content"></div>
+                </div>
+
+            </ion-content>
+        </div>
+
+        <!-- 视频 -->
+        <div class="pb" ng-if="videoInfo.sellAbled && videoInfo.genreName == 'video'">
+            
+            <div class="video-container mb" cm-video="videoInfo.videoUrl"></div>
+
+            <ion-content class="video-content">
 
                 <!--下拉刷新-->
                 <ion-refresher on-refresh="videoInfo.refresh({showLoading: false})" 
@@ -72,32 +95,12 @@
                     </div>
                 </div>
 
-                <!-- 视频介绍 -->
+                <!-- 介绍 -->
                 <div class="video-info-describe light-bg">
                     <div class="describe-title">内容介绍</div>
                     <div class="describe-content" ng-bind-html="videoInfo.baseData.content"></div>
                 </div>
 
-                <!-- 点评 -->
-                <!-- <div class="video-info-comments light-bg" ng-if="videoInfo.commentsList">
-                    <div class="comments-title">点评<span class="amount">({{videoInfo.commentsList.length}})</span></div>
-                    <ul class="comments-list">
-                        <li class="comments-item clearfix" ng-repeat="comment in videoInfo.commentsList">
-                            <div class="comments-pic fl">
-                                <img class="img" cm-lazyload="comment.imagePath" load-immediate="true" 
-                                    ng-if="comment.imagePath"/>
-                            </div>
-                            <div class="comments-right">
-                                <div class="comments-info clearfix">
-                                    <span class="comments-name fl">{{comment.nickName | textFormat: true}}</span>
-                                    <span class="comments-time fl">{{comment.createTime}}</span>
-                                    <cm-comment-level class="fr" level="{{comment.score}}"></cm-comment-level>
-                                </div>
-                                <div class="comments-content">{{comment.content}}</div>
-                            </div>
-                        </li>
-                    </ul>
-                </div> -->
             </ion-content>
         </div>
 
