商城详情页－添加快递信息

--- a/src/common/templates/mall/mallProductInfo.html
+++ b/src/common/templates/mall/mallProductInfo.html
@@ -57,7 +57,7 @@
                 </div>
                 <div class="info-express">
                     <span class="fr">发货地：北京</span>
-                    快递：韵达快递
+                    快递：{{mallProductInfo.expressCompany}}
                 </div>
             </div>
 
