新增－友盟分享

--- a/src/common/resources/sass/_navBar.scss
+++ b/src/common/resources/sass/_navBar.scss
@@ -30,6 +30,10 @@
         .bar-button-text {
             font-size: 14px;
         }
+
+        .icon-fenxiang {
+            font-size: 18px;
+        }
     }
 
     &.bar-light {
