优化－结算／购物车／订单列表／订单详情，根据课程／图书，分别显示价格

--- a/src/common/templates/modals/checkout.html
+++ b/src/common/templates/modals/checkout.html
@@ -44,7 +44,9 @@
                         <div class="item-title">{{item.sku.title}}</div>
                         <div class="item-content">{{item.sku.attributes.subtitle}}</div>
                         <div class="item-price">
-                            <span class="price">{{item.sku.prices.offerPrice.price | currency: '¥'}}/年</span>
+                            <div class="price">
+                                {{item.sku.prices.offerPrice.price | currency: '¥'}}<span ng-if="item.sku.attributes.genreName != 'book'">/年<span>
+                            </div>
                             <span class="numbers">x{{item.quantity}}</span>
                         </div>
                     </div>
