结算中心－ios键盘弹出时，半个弹层全屏问题

--- a/src/common/templates/modals/checkout.html
+++ b/src/common/templates/modals/checkout.html
@@ -1,5 +1,5 @@
 <!-- 结算 -->
-<ion-modal-view title="确认订单" class="checkout-modal-view stable-bg">
+<ion-modal-view title="确认订单" class="checkout-modal-view stable-bg" cm-resize-height>
 
     <ion-header-bar class="bar-primary">
         <button class="button button-clear left-btn" ng-click="checkout.close()">
