--- a/src/common/templates/modals/choosePayment.html
+++ b/src/common/templates/modals/choosePayment.html
@@ -1,5 +1,5 @@
 <!-- 选择支付方式 -->
-<ion-modal-view class="checkout-modal-panel">
+<ion-modal-view class="checkout-modal-panel" cm-resize-height>
 
     <div class="bar-primary-modal" ng-click="modals.choosePayment.close()">
         选择支付方式
