优惠券弹层－样式修改

--- a/src/common/templates/modals/startEvent.html
+++ b/src/common/templates/modals/startEvent.html
@@ -8,24 +8,24 @@
                     <li class="start-event-item">
                         <span class="item-symbol">&yen;</span>
                         <span class="item-num">20</span>
-                        <span class="item-tips">图书券 满99元使用</span>
-                        <span class="item-title">优惠券</span>
+                        <span class="item-tips">满99元使用</span>
+                        <span class="item-title">优惠券-图书类</span>
                         <span class="item-date">有效期：自领券之日起15日内有效</span>
                         <span class="item-line"></span>
                     </li>
                     <li class="start-event-item">
                         <span class="item-symbol">&yen;</span>
                         <span class="item-num">20</span>
-                        <span class="item-tips">视频券 满39元使用</span>
-                        <span class="item-title">优惠券</span>
+                        <span class="item-tips">满39元使用</span>
+                        <span class="item-title">优惠券-视频类</span>
                         <span class="item-date">有效期：自领券之日起15日内有效</span>
                         <span class="item-line"></span>
                     </li>
                     <li class="start-event-item">
                         <span class="item-symbol">&yen;</span>
                         <span class="item-num">10</span>
-                        <span class="item-tips">通用券 全场通用</span>
-                        <span class="item-title">优惠券</span>
+                        <span class="item-tips">全场通用 满50元可用</span>
+                        <span class="item-title">优惠券-通用券</span>
                         <span class="item-date">有效期：自领券之日起15日内有效</span>
                         <span class="item-line"></span>
                     </li>
