--- a/src/common/templates/modals/shareEvent.html
+++ b/src/common/templates/modals/shareEvent.html
@@ -1,12 +1,8 @@
 <!-- 分享 -->
 <ion-modal-view class="share-event-modal-view">
 
-    <div class="bar-primary-modal" ng-click="shareEvent.close()">
-        分享
-        <i class="icon-close-modal icon ion-ios-close-empty"></i>
-    </div>
-
     <ion-content scroll="true">
+        <div class="share-title">请选择分享平台</div>
         <div class="share-row row">
             <div class="share-col col" ng-click="shareEvent.shareToWechat()">
                 <div class="share-icon wechat-icon"></div>
@@ -14,13 +10,14 @@
             </div>
             <div class="share-col col" ng-click="shareEvent.shareToWechatTimeline()">
                 <div class="share-icon wechat-timeline-icon"></div>
-                <div class="share-text">朋友圈</div>
+                <div class="share-text">微信朋友圈</div>
             </div>
             <div class="share-col col" ng-click="shareEvent.copyLink()">
                 <div class="share-icon copy-line-icon"></div>
                 <div class="share-text">复制链接</div>
             </div>
         </div>
+        <div class="share-btn" ng-click="shareEvent.close()">取消分享</div>
     </ion-content>
 
 </ion-modal-view>
