课程详情页－添加去购物车的功能

--- a/src/common/templates/productInfo.html
+++ b/src/common/templates/productInfo.html
@@ -11,6 +11,13 @@
         <div class="title title-center header-item">
             课程介绍
         </div>
+        <div class="buttons buttons-right" ng-click="productInfo.goShoppingCart()">
+            <span class="right-buttons">
+                <button class="button button-clear">
+                    <i class="iconfont icon-gouwuche"></i>
+                </button>
+            </span>
+        </div>
     </ion-header-bar>
 
     <ion-content class="stable-bg" delegate-handle="productInfoScroll">
