--- a/src/common/templates/user.html
+++ b/src/common/templates/user.html
@@ -39,7 +39,8 @@
                 </div>
             </li>
 
-            <li class="user-item row" ng-click="user.goCouponList()">
+            <li class="user-item row" ng-click="user.goCouponList()"
+                ng-if="user.bytSwitch21">
                 <i class="icon ion-ios-filing-outline icon-left col col-adaptive"></i>
                 <div class="col">
                     <div class="item-row row">
@@ -61,7 +62,7 @@
             </li> -->
 
             <li class="user-item row" ng-click="user.goExchangeList()"
-                ng-if="user.bytSwitch">
+                ng-if="user.bytSwitch21">
                 <i class="iconfont icon-duihuan icon-left col col-adaptive"></i>
                 <div class="col">
                     <div class="item-row row">
@@ -73,7 +74,7 @@
             </li>
 
             <li class="user-item row" ng-click="user.goExchangeCode()"
-                ng-if="user.bytSwitch">
+                ng-if="user.bytSwitch21">
                 <i class="iconfont icon-code icon-left col col-adaptive"></i>
                 <div class="col">
                     <div class="item-row row">
@@ -84,7 +85,8 @@
                 </div>
             </li>
 
-            <li class="user-item row" ng-click="user.goDownloadVideoList()">
+            <li class="user-item row" ng-click="user.goDownloadVideoList()"
+                ng-if="user.bytSwitch21">
                 <i class="iconfont icon-lixian icon-left col col-adaptive"></i>
                 <div class="col">
                     <div class="item-row row">
@@ -94,7 +96,8 @@
                 </div>
             </li>
 
-            <li class="user-item row" ng-click="user.goViewVideoList()">
+            <li class="user-item row" ng-click="user.goViewVideoList()"
+                ng-if="user.bytSwitch21">
                 <i class="iconfont icon-jilu icon-left col col-adaptive"></i>
                 <div class="col">
                     <div class="item-row row">
