--- a/src/common/templates/user.html
+++ b/src/common/templates/user.html
@@ -137,6 +137,18 @@
                 </div>
             </li>
 
+            <li class="user-item row" ng-click="user.goUserAccount()"
+                ng-if="user.showUserAccount">
+                <i class="iconfont icon-zaizhipeixun icon-left col col-adaptive"></i>
+                <div class="col">
+                    <div class="item-row row">
+                        <span class="item-text col">我的帐户</span>
+                        <span class="item-tip col col-adaptive"></span>
+                        <i class="iconfont icon-rightarrow col col-adaptive"></i>
+                    </div>
+                </div>
+            </li>
+
         </ul>
 
         <ul class="user-list light-bg">
