--- a/src/mobile/resources/sass/main.scss
+++ b/src/mobile/resources/sass/main.scss
@@ -73,6 +73,9 @@
 "pages/downloadVideoList",
 "pages/viewVideoList",
 "pages/orderRefundInfo",
+"pages/userAccount",
+"pages/userAccountPurchasedList",
+"pages/userAccountBindPay",
 
 "pages/login",
 "pages/register",
