--- a/src/common/templates/exchangeVideoList.html
+++ b/src/common/templates/exchangeVideoList.html
@@ -1,4 +1,4 @@
-<ion-view title="兑换视频" cm-hide-tabs="true">
+<ion-view title="兑换列表" cm-hide-tabs="true">
 
     <ion-header-bar class="bar bar-header bar-primary disable-user-behavior">
         <div class="buttons buttons-left">
@@ -9,7 +9,7 @@
             </span>
         </div>
         <div class="title title-center header-item">
-            兑换视频
+            兑换列表
         </div>
     </ion-header-bar>
 
