--- a/src/common/templates/user.html
+++ b/src/common/templates/user.html
@@ -39,8 +39,7 @@
                 </div>
             </li>
 
-            <li class="user-item row" ng-click="user.goCouponList()"
-                ng-if="user.bytSwitch21">
+            <li class="user-item row" ng-click="user.goCouponList()">
                 <i class="icon ion-ios-filing-outline icon-left col col-adaptive"></i>
                 <div class="col">
                     <div class="item-row row">
@@ -61,8 +60,7 @@
                 </div>
             </li> -->
 
-            <li class="user-item row" ng-click="user.goExchangeList()"
-                ng-if="user.bytSwitch21">
+            <li class="user-item row" ng-click="user.goExchangeList()">
                 <i class="iconfont icon-duihuan icon-left col col-adaptive"></i>
                 <div class="col">
                     <div class="item-row row">
@@ -73,8 +71,7 @@
                 </div>
             </li>
 
-            <li class="user-item row" ng-click="user.goExchangeCode()"
-                ng-if="user.bytSwitch21">
+            <li class="user-item row" ng-click="user.goExchangeCode()">
                 <i class="iconfont icon-code icon-left col col-adaptive"></i>
                 <div class="col">
                     <div class="item-row row">
@@ -85,8 +82,7 @@
                 </div>
             </li>
 
-            <li class="user-item row" ng-click="user.goDownloadVideoList()"
-                ng-if="user.bytSwitch21">
+            <li class="user-item row" ng-click="user.goDownloadVideoList()">
                 <i class="iconfont icon-lixian icon-left col col-adaptive"></i>
                 <div class="col">
                     <div class="item-row row">
@@ -96,8 +92,7 @@
                 </div>
             </li>
 
-            <li class="user-item row" ng-click="user.goViewVideoList()"
-                ng-if="user.bytSwitch21">
+            <li class="user-item row" ng-click="user.goViewVideoList()">
                 <i class="iconfont icon-jilu icon-left col col-adaptive"></i>
                 <div class="col">
                     <div class="item-row row">
