优化－popup样式及换行文本提示

--- a/src/common/resources/sass/_popup.scss
+++ b/src/common/resources/sass/_popup.scss
@@ -31,7 +31,7 @@
 
     .popup-body {
         margin-bottom: 20px;
-        text-align: center;
+        text-align: left;
     }
 
     .button-balanced {
